@@ -739,7 +739,7 @@ class Text(Artist):
 
         return val
 
-class TextWithDash(Artist):
+class _TextWithDash(Artist):
     """
     This is basically a Text with a dash (drawn with a Line2D)
     before/after it. It is intended to be a drop-in replacement
@@ -1074,7 +1074,7 @@ class TextWithDash(Artist):
         self.dashline.set_figure(fig)
 
 
-class _TextWithDash(Text):
+class TextWithDash(Text):
     """
     This is basically a Text with a dash (drawn with a Line2D)
     before/after it. It is intended to be a drop-in replacement
@@ -1154,15 +1154,15 @@ class _TextWithDash(Text):
                                color='k',
                                linestyle='-')
         
-        self._dashx = x
-        self._dashy = y
+        self._dashx = float(x)
+        self._dashy = float(y)
         self._dashlength = dashlength
         self._dashdirection = dashdirection
         self._dashrotation = dashrotation
         self._dashpad = dashpad
         self._dashpush = dashpush
 
-        self.set_bbox(dict(pad=0))
+        #self.set_bbox(dict(pad=0))
 
     def draw(self, renderer):
         self.update_coords(renderer)
@@ -1178,11 +1178,10 @@ class _TextWithDash(Text):
         map back and forth.
         """
         dashx, dashy = self.get_position()
-##        print dashx, dashy
         dashlength = self.get_dashlength()
         # Shortcircuit this process if we don't have a dash
         if dashlength == 0.0:
-            Text.set_position(self, (dashx, dashy))
+            self._x, self._y = dashx, dashy
             return
         
         dashrotation = self.get_dashrotation()
@@ -1195,7 +1194,7 @@ class _TextWithDash(Text):
         cos_theta, sin_theta = cos(theta), sin(theta)
 
         transform = self.get_transform()
-
+        
         # Compute the dash end points
         # The 'c' prefix is for canvas coordinates
         cxy = array(transform.xy_tup((dashx, dashy)))
@@ -1205,8 +1204,6 @@ class _TextWithDash(Text):
         
         (x1, y1) = transform.inverse_xy_tup(tuple(c1))
         (x2, y2) = transform.inverse_xy_tup(tuple(c2))
-        print x1, y1
-        print x2, y2
         self.dashline.set_data((x1, x2), (y1, y2))
 
         # We now need to extend this vector out to
@@ -1242,13 +1239,14 @@ class _TextWithDash(Text):
         cwd = array([dx, dy])/2
         cwd *= 1+dashpad/sqrt(dot(cwd,cwd))
         cw = c2+(dashdirection*2-1)*cwd
-        Text.set_position(self, transform.inverse_xy_tup(tuple(cw)))
+        
+        self._x, self._y = transform.inverse_xy_tup(tuple(cw))
 
         # Now set the window extent
         # I'm not at all sure this is the right way to do this.
         we = Text.get_window_extent(self, renderer=renderer)
-        self._window_extent = we.deepcopy()
-        self._window_extent.update(((c1[0], c1[1]),), False)
+        self._twd_window_extent = we.deepcopy()
+        self._twd_window_extent.update(((c1[0], c1[1]),), False)
 
         # Finally, make text align center
         Text.set_horizontalalignment(self, 'center')
@@ -1259,7 +1257,7 @@ class _TextWithDash(Text):
         if self.get_dashlength() == 0.0:
             return Text.get_window_extent(self, renderer=renderer)
         else:
-            return self._window_extent
+            return self._twd_window_extent
 
     def get_dashlength(self):
         return self._dashlength
@@ -1361,8 +1359,6 @@ class _TextWithDash(Text):
 
         ACCEPTS: a matplotlib.transform transformation instance
         """
-        self._transform = t
-        self._transformSet = True
         Text.set_transform(self, t)
         self.dashline.set_transform(t)
 
@@ -1376,6 +1372,5 @@ class _TextWithDash(Text):
 
         ACCEPTS: a matplotlib.figure.Figure instance
         """
-        self.figure = fig
         Text.set_figure(self, fig)
         self.dashline.set_figure(fig)
